reserving scrollbar space to prevent shifts when modal is opened

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -11,10 +11,13 @@
   --font-mono: var(--font-geist-mono);
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   background: var(--background);
   color: #fff;
-  font-family: Ar;
 }
 
 @layer components {
